src/compiler/tests/snapshots/test_output__parser_output_symbol_table@Main.jack-2.snap
---
source: src/compiler/tests/test_output.rs
expression: result_xml
input_file: src/compiler/tests/inputs/11/Square/Main.jack
---
<class>
  <keyword> class </keyword>
  <identifier> Main </identifier>
  <symbol> { </symbol>
  <subroutineDec>
    <keyword> function </keyword>
    <keyword> void </keyword>
    <identifier> main </identifier>
    <symbol> ( </symbol>
    <parameterList>
    </parameterList>
    <symbol> ) </symbol>
    <subroutineBody>
      <symbol> { </symbol>
      <varDec>
        <keyword> var </keyword>
        <identifier> SquareGame </identifier>
        <identifier>
          <identifierName> game </identifierName>
          <identifierCategory> var </identifierCategory>
          <identifierIndex> 0 </identifierIndex>
          <identifierIsUsed> false </identifierIsUsed>
        </identifier>
        <symbol> ; </symbol>
      </varDec>
      <statements>
        <letStatement>
          <keyword> let </keyword>
          <identifier>
            <identifierName> game </identifierName>
            <identifierCategory> var </identifierCategory>
            <identifierIndex> 0 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> = </symbol>
          <expression>
            <term>
              <identifier> SquareGame </identifier>
              <symbol> . </symbol>
              <identifier> new </identifier>
              <symbol> ( </symbol>
              <expressionList>
              </expressionList>
              <symbol> ) </symbol>
            </term>
          </expression>
          <symbol> ; </symbol>
        </letStatement>
        <doStatement>
          <keyword> do </keyword>
          <identifier>
            <identifierName> game </identifierName>
            <identifierCategory> var </identifierCategory>
            <identifierIndex> 0 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> . </symbol>
          <identifier> run </identifier>
          <symbol> ( </symbol>
          <expressionList>
          </expressionList>
          <symbol> ) </symbol>
          <symbol> ; </symbol>
        </doStatement>
        <doStatement>
          <keyword> do </keyword>
          <identifier>
            <identifierName> game </identifierName>
            <identifierCategory> var </identifierCategory>
            <identifierIndex> 0 </identifierIndex>
            <identifierIsUsed> true </identifierIsUsed>
          </identifier>
          <symbol> . </symbol>
          <identifier> dispose </identifier>
          <symbol> ( </symbol>
          <expressionList>
          </expressionList>
          <symbol> ) </symbol>
          <symbol> ; </symbol>
        </doStatement>
        <returnStatement>
          <keyword> return </keyword>
          <symbol> ; </symbol>
        </returnStatement>
      </statements>
      <symbol> } </symbol>
    </subroutineBody>
  </subroutineDec>
  <symbol> } </symbol>
</class>

